more work on intro

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -11,10 +11,16 @@
   url = {https://github.com/epfl-lara/stainless},
 }
 
-@misc{BitcoinSProject,
-  author = "{Source code of Bitcoin-S}",
+@misc{BitcoinS:github,
+  author = "{The bitcoin-s developers}",
   url = {https://github.com/bitcoin-s},
 }
+
+@misc{BitcoinS:website,
+  author = "{Suredbits \& the bitcoin-s developers}",
+  url = {https://bitcoin-s.org},
+}
+
 
 @misc{BitcoinSCore:txbuilderexample,
   title = {{Transaction Builder Example}},
