more work on intro

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -7,24 +7,24 @@
 }
 
 @misc{Stainless:github,
-  author = "{Source code of Stainless}",
+  author = "The Stainless developers",
+  title = "The Stainless repository",
   url = {https://github.com/epfl-lara/stainless},
+  note = {Accessed 2019-06-19}
 }
 
 @misc{BitcoinS:github,
   author = "{The bitcoin-s developers}",
+  title = "The bitcoin-s repository",
   url = {https://github.com/bitcoin-s},
+  note = {Accessed 2019-06-19}
 }
 
 @misc{BitcoinS:website,
   author = "{Suredbits \& the bitcoin-s developers}",
+  title = "The bitcoin-s website",
   url = {https://bitcoin-s.org},
-}
-
-
-@misc{BitcoinSCore:txbuilderexample,
-  title = {{Transaction Builder Example}},
-  url = {https://github.com/bitcoin-s/bitcoin-s/blob/master/docs/core/txbuilder.md},
+  note = {Accessed 2019-06-19}
 }
 
 @misc{cve201817144,
